# migraphx_tests

./: .gitmodules  CMakeLists.txt  Makefile  Makefile_backup  Makefile_backup1  cmd_options.cpp  cmd_options.hpp  gru_test_1direct.cpp  gru_test_bidirect.cpp  load_model1.py  lstm_gpu.cpp  lstm_test_bidirect.cpp  mySin.cpp  mySinGpu.cpp  rnn_gpu.cpp  testTypename.cpp  test_add.cpp  test_concat.cpp  test_convolution.cpp  test_dot.cpp  test_gather.cpp  test_gather.cpp_bkup  test_gru_bidirect.cpp  test_gru_decoder.cpp  test_load_onnx.cpp  test_logsoftmax.cpp  test_lstm_gpu.cpp  test_mm.cpp  test_quantization.cpp  test_rnn.cpp  test_rnn_both.cpp  test_rnn_cpu.cpp  test_rnn_single.cpp  test_run_onnx.cpp  test_shape.cpp  test_sin.cpp  utilities.cpp  utilities.hpp
bert/: bert_tokenizer.py  export_bert.py  export_bertmlm.py  export_bertmodel.py
bert/end2end/: CMakeLists.txt
bert/end2end/migraphx/: CMakeLists.txt  migraphx_mrpc.cpp  mrpc.cpp
bert/end2end/python/: mrpc.py  onnxruntime_mrpc.py  setpypath.sh
bert/end2end/src/: mrpc.cpp
bert/end2end/tensorrt/: CMakeLists.txt  tensorrt_mrpc.cpp
bert/end2end_bkup/: CMakeLists.txt
bert/end2end_bkup/python/: mrpc.py
bert/end2end_bkup/src/: mrpc.cpp  mrpc_glue_input.cpp
bert/inputs/: MRPC.tst  mrpc_glue.txt
bert/onnx/: bertsquad10.onnx  infer_onnx.py
c_api/: CMakeLists.txt  migraphx_c_api.h  test_run_onnx.cpp  utilities.hpp
json/: CMakeLists.txt  convert_to_json_string.cpp  convert_to_json_string.hpp  test_array.cpp  test_implicit.cpp  test_json2.cpp  test_json3.cpp  test_json4.cpp
libclang/: clang_type_perf.py
mgx_c_api/: CMakeLists.txt  test_load_onnx.cpp  test_run_onnx.cpp  utilities.hpp
migraphx_test_runner/: .test_runner.py.swp  CMakeLists.txt  get_cases.cpp  get_cases.hpp  get_model_param_names.cpp  get_model_param_names.hpp  onnx_test.sh  parse_tensor.cpp  parse_tensor.hpp  protobuf.cmake  run_tests.cpp  run_tests.hpp  test_runner.cpp  test_runner.py  utilities.hpp
migraphx_test_runner/python/: set_path.sh  test_runner.py
migraphx_test_runner/tests/: test.sh
mytests/: CMakeLists.txt  convert_to_json_string.cpp  read_shape.cpp  read_shape.hpp  test_gather.cpp  test_if.cpp  test_int8.cpp  test_load_onnx.cpp  test_module.cpp  test_multi_modules.cpp  test_perf_report.cpp  test_permutation.cpp  test_run_onnx.cpp  test_slice.cpp  test_softmax.cpp  test_value.cpp  utilities.hpp
onnx_tools/: convert_version.py  fp32_to_fp16.py  gen_inferred_onnx.py  infer_onnx.py  onnx_dynamic.py  print_onnx.py  quantize_model.py  read_pb.py
onnxruntime/: CMakeLists.txt  test.cpp  test_c.cpp  test_char_rnn.cpp  test_mrpc.cpp
onnxruntime/python/: run_onnx.py  setpypath.sh  test_run_onnx.py
op_examples/: split.c  test_add.cpp  test_api.cpp  test_argmax.cpp  test_avepool.cpp  test_batchnorm.cpp  test_char_rnn.cpp  test_const_eval.cpp  test_context.cpp  test_conv.cpp  test_copy_program.cpp  test_debug_param.cpp  test_div_sqrt.cpp  test_dot.cpp  test_eleminate_contiguous.cpp  test_equal.cpp  test_gather.cpp  test_get_split.cpp  test_int8.cpp  test_load_rnn.cpp  test_lrn.cpp  test_lstm_fdirect.cpp  test_lstm_rdirect.cpp  test_operation.cpp  test_pass_manager.cpp  test_pooling.cpp  test_quantization.cpp  test_reduce.cpp  test_relu_lrn.cpp  test_resize.cpp  test_rewrite_batchnorm.cpp  test_rnn.cpp  test_rnn_single.cpp  test_run_onnx_int8.cpp  test_scheduling.cpp  test_simplify_reshape.cpp  test_sin.cpp  test_softmax.cpp  test_upsample.cpp  test_value.cpp  (+3 more)
protobuf/: CMakeLists.txt  parse_onnx.cpp  parse_tensor.cpp  requirements.txt
python/: setpypath.sh  test_load.py
run_onnx/: CMakeLists.txt  run_onnx.cpp  run_onnx.py  setpypath.sh  utilities.hpp
seq2seq/: CMakeLists.txt
seq2seq/data/: data_processing.py  eng-fra_procd.txt
seq2seq/inc/: language.hpp  load_onnx.hpp  s2s_utilities.hpp
seq2seq/python/: seq2seq_translation.py  setpypath.sh
seq2seq/src/: language.cpp  load_onnx.cpp  s2s_utilities.cpp  seq2seq_translation.cpp  seq2seq_translation.py
tensorrt/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test_load_onnx.cpp  test_run_onnx.cpp
xception/: run_mgx.sh  run_ort.sh  run_xception.py
